Cleaed up the readme to declare which services it is capable of monitoring.
Fixed some of the names in main.yml to be more descriptive.

Fixed some jinja formatting issues

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -23,7 +23,7 @@
   pip: name=newrelic-plugin-agent version={{ newrelic_plugin_agent_version }}
   when: newrelic_plugin_agent_version != 'latest'
 
-- name: Install per agent requirements
+- name: Include per agent requirements
   include: install_agent_per_service_requirements.yml
 
 - name: Add newrelic plugin user
