--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -38,12 +38,16 @@
 - name: Create config directory
   file: path={{ newrelic_plugin_config_location }} state=directory owner={{ newrelic_plugin_user }} mode=755
 
+- debug: var=ansbile_local
+
 - name: Template newrelic plugin config file
   template: dest={{ newrelic_plugin_config_location }}/{{ newrelic_plugin_config_name }} src=newrelic_plugin_agent.cfg.j2 owner={{ newrelic_plugin_user }} mode=600
 
 - name: Install init script into init.d
   template: dest=/etc/init.d/newrelic_plugin_agent src=newrelic_plugin_agent.{{ ansible_os_family }}.startup.j2 owner=root group=root mode=0750
-  notify: restart {{ newrelic_plugin_daemon_name  }}
+  notify: restart newrelic_plugin
 
 - name: Enable and start newrelic plugin service
   service: name={{ newrelic_plugin_daemon_name }} state=started enabled=True
+
+- debug: var=hostvars[inventory_hostname].ansible_local.elasticsearch
