--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,4 +1,4 @@
 ---
 # handlers file for newrelic-plugin-meetme
-- name: restart {{ newrelic_plugin_daemon_name }}
+- name: restart newrelic_plugin
   service: name={{ newrelic_plugin_daemon_name }} state=restarted
