--- a/tasks/Debian-system-packages.yml
+++ b/tasks/Debian-system-packages.yml
@@ -1,9 +1,3 @@
 ---
-- name: Updating apt
-  command: 'apt-get update'
-
-- name: Ensuring python-apt is installed
-  command: 'apt-get -y install python-apt'
-
-- name: python-pip installed
+- name: Debian | python-pip installed
   apt: pkg=python-pip update_cache=yes state=installed
