Added vars for ubuntu in the test build

--- a/tests/main.yml
+++ b/tests/main.yml
@@ -1,4 +1,7 @@
 ---
 - hosts: localhost
+  vars:
+    newrelic_plugin_daemon_name: newrelic-plugin-agent
+    newrelic_plugin_service_name : newrelic_plugin_agent
   roles:
     - Rackspace_Automation.newrelic-plugin-meetme
