--- a/.drone.yml
+++ b/.drone.yml
@@ -1,7 +1,9 @@
 image: linuturk/ubuntu-ansible
+env:
+  - NEWRELIC_LICENSE_KEY=NOT_REAL_API_KEY
 script:
   - ansible-galaxy install -r $DRONE_BUILD_DIR/tests/roles.list
   - ansible-playbook --syntax-check $DRONE_BUILD_DIR/tests/main.yml
-  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml
-  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml
-  - "ansible-playbook $DRONE_BUILD_DIR/tests/main.yml | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)"
+  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars "newrelic_license_key=$NEWRELIC_LICENSE_KEY"
+  - ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars "newrelic_license_key=$NEWRELIC_LICENSE_KEY"
+  - "ansible-playbook $DRONE_BUILD_DIR/tests/main.yml --extra-vars 'newrelic_license_key=$NEWRELIC_LICENSE_KEY' | grep -q 'changed=0.*failed=0' && (echo 'Idempotence test: pass' && exit 0) || (echo 'Idempotence test: fail' && exit 1)"
